# Smart-Price-Predictor

./: .gitignore  Makefile  README.md  app.py  model.joblib  pyproject.toml  requirements-dev.txt  requirements.txt  run_deployment.py  run_pipeline.py  sample_predict.py  save_model.py
analysis/analyze_src/: __init__.py
explanations/: factory_design_pattern.py
pipelines/: deployment_pipeline.py  training_pipeline.py
src/: data_splitter.py  feature_engineering.py  handle_missing_values.py  ingest_data.py  model_building.py  model_evaluator.py  outlier_detection.py
steps/: data_ingestion_step.py  data_splitter_step.py  dynamic_importer.py  feature_engineering_step.py  handle_missing_values_step.py  model_building_step.py  model_evaluator_step.py  model_loader.py  outlier_detection_step.py  prediction_service_loader.py  predictor.py
