[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prices-predictor-system"
version = "1.0.0"
description = "Production-grade house price prediction MLOps pipeline (Ames Housing dataset)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "click>=8.1.3",
    "matplotlib>=3.8.0",
    "mlflow>=2.15.1",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "rich>=13.7.1",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.1",
    "streamlit>=1.35.0",
    "zenml>=0.64.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "steps*", "pipelines*", "analysis*"]

[tool.setuptools.package-dir]
"" = "."
